# lecture-testing-task

./: .gitignore
.github/workflows/: c-cpp.yml
05_hw/: CMakeLists.txt  bench.cpp  stack.cpp
